--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "cwd": "${workspaceFolder}",
             "args":
             [
-                "prot.conf.js"
+                "../.converted-typescript/runner/prot.conf.js"
             ],
         }
     ]
