--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/cucumber": "^4.0.4",
     "cucumber-html-reporter": "^4.0.4",
+    "frisby": "^2.1.0",
     "hamjest": "^3.2.1"
   },
   "scripts": {
