--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 node_modules/
 reports/
 README.md
+.converted-typescript/
+.converted-typescript/api/*.js
+.converted-typescript/common/*.js
+.converted-typescript/steps/*.js
