--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "selenium-standalone-jar": "^3.0.1",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
-    "typescript": "^3.1.6"
+    "typed-rest-client": "^1.0.11",
+    "typescript": "^3.1.6",
+    "typescript-string-operations": "^1.3.1"
   },
   "devDependencies": {
     "@types/cucumber": "^4.0.4",
